// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reset password reducer should handle ERROR 1`] = `
Object {
  "errors": undefined,
  "isAuthenticated": false,
  "isLoading": false,
  "passwordChangeError": "",
  "passwordChangeSuccess": "",
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
  "verified": "",
}
`;

exports[`reset password reducer should handle ERROR 2`] = `
Object {
  "errors": undefined,
  "isAuthenticated": false,
  "isLoading": false,
  "passwordChangeError": "",
  "passwordChangeSuccess": "",
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
  "verified": "",
}
`;

exports[`reset password reducer should handle LOADING 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": true,
  "passwordChangeError": "",
  "passwordChangeSuccess": "",
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
  "verified": "",
}
`;

exports[`reset password reducer should handle PASSWORD_CHANGE_ERROR 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordChangeError": undefined,
  "passwordChangeSuccess": "",
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
  "verified": "",
}
`;

exports[`reset password reducer should handle PASSWORD_CHANGE_ERROR 2`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordChangeError": undefined,
  "passwordChangeSuccess": "",
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
  "verified": "",
}
`;

exports[`reset password reducer should handle PASSWORD_CHANGE_SUCCESS 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordChangeError": "",
  "passwordChangeSuccess": undefined,
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
  "verified": "",
}
`;

exports[`reset password reducer should handle PASSWORD_CHANGE_SUCCESS 2`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordChangeError": "",
  "passwordChangeSuccess": undefined,
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
  "verified": "",
}
`;

exports[`reset password reducer should handle PASSWORD_RESET_ERROR 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordChangeError": "",
  "passwordChangeSuccess": "",
  "passwordResetError": "invalid email",
  "passwordResetSuccess": "",
  "user": Object {},
  "verified": "",
}
`;

exports[`reset password reducer should handle PASSWORD_RESET_SUCCESS 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordChangeError": "",
  "passwordChangeSuccess": "",
  "passwordResetError": "",
  "passwordResetSuccess": "Please check your email",
  "user": Object {},
  "verified": "",
}
`;

exports[`reset password reducer should return the initial state 1`] = `
Object {
  "errors": Object {},
  "isAuthenticated": false,
  "isLoading": false,
  "passwordChangeError": "",
  "passwordChangeSuccess": "",
  "passwordResetError": "",
  "passwordResetSuccess": "",
  "user": Object {},
  "verified": "",
}
`;
